Added ability to toggle coastlines, grids, and labels

--- a/index.html
+++ b/index.html
@@ -82,14 +82,13 @@
                             </select>
                         </div>
                         <div class="checkbox">
-                            <label><input type="checkbox"> Show coastlines</label>
+                            <label><input type="checkbox" id="coastcheck"> Show coastlines</label>
                         </div>
                         <div class="checkbox">
-                            <label><input type="checkbox"> Show labels</label>
+                            <label><input type="checkbox" id="labelcheck"> Show labels</label>
                         </div>
-
                         <div class="checkbox">
-                            <label><input type="checkbox"> Show grid</label>
+                            <label><input type="checkbox" id="gridcheck"> Show grid</label>
                         </div>
                     </form>
                 </div>
