--- a/index.html
+++ b/index.html
@@ -73,12 +73,10 @@
 
                     <form role="form">
                         <div class="form-group">
-                            <label for="sel1">Base layer source</label>
-                            <select class="form-control" id="sel1">
-                                <option>1</option>
-                                <option>2</option>
-                                <option>3</option>
-                                <option>4</option>
+                            <label for="baselayer">Base layer source</label>
+                            <select class="form-control" id="baselayer">
+                                <option value="MODIS_Terra_CorrectedReflectance_TrueColor">Satellite Image</option>
+                                <option value="AIRS_CO_Total_Column_Day">Carbon Monoxide(Day)</option>
                             </select>
                         </div>
                         <div class="checkbox">
