Working EONET query

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div id="day-slider"></div>
     </div>
 
-    <div class="panel-group" id="accordion" style="position:absolute;top:10px;left:175px;padding:5px 3px;">
+    <div class="panel-group" id="accordion" style="position:absolute;top:2%;left:10%;padding:5px 3px;">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
@@ -101,10 +101,11 @@
             </div>
             <div id="collapse2" class="panel-collapse collapse">
                 <div class="panel-body">
-                    <p>Type of event</p>
-                    <p>Source</p>
-                    <p>Date range</p>
-                    <p>Other?</p>
+                    <form role="form">
+
+                        <button type="button" class="btn" id="eonet_btn">Eonet Search</button>
+
+                    </form>
                 </div>
             </div>
         </div>
