Added more base layers

--- a/index.html
+++ b/index.html
@@ -76,7 +76,32 @@
                             <label for="baselayer">Base layer source</label>
                             <select class="form-control" id="baselayer">
                                 <option value="MODIS_Terra_CorrectedReflectance_TrueColor">Satellite Image</option>
-                                <option value="AIRS_CO_Total_Column_Day">Carbon Monoxide(Day)</option>
+                                <option value="AIRS_CO_Total_Column_Day">Carbon Monoxide (Day)</option>
+                                <option value="AIRS_CO_Total_Column_Night">Carbon Monoxide (Night)</option>
+                                <option value="AIRS_Dust_Score_Ocean_Day">Ocean Dust (Day)</option>
+                                <option value="AIRS_Dust_Score_Ocean_Night">Ocean Dust (Night)</option>
+                                <option value="AIRS_Prata_SO2_Index_Day">SO2 (Day)</option>
+                                <option value="AIRS_Prata_SO2_Index_Night">SO2 (Night)</option>
+                                <option value="AIRS_Precipitation_Day">Precipitation (Day)</option>
+                                <option value="AIRS_Precipitation_Night">Precipitation (Night)</option>
+                                <option value="MODIS_Aqua_Aerosol">Aqua Aerosol</option>
+                                <option value="MODIS_Aqua_Brightness_Temp_Band31_Day">Aqua Brightness (Day)</option>
+                                <option value="MODIS_Aqua_Brightness_Temp_Band31_Night">Aqua Brightness (Night)</option>
+                                <option value="MODIS_Aqua_Chlorophyll_A">Aqua Chlorophyll</option>
+                                <option value="MODIS_Aqua_CorrectedReflectance_TrueColor">Aqua Corrected Reflectance</option>
+                                <option value="MODIS_Aqua_Land_Surface_Temp_Day"> Aqua Land Surface Temp (Day)</option>
+                                <option value="MODIS_Aqua_Land_Surface_Temp_Night">Aqua Land Surface Temp (Day)</option>
+                                <option value="MODIS_Aqua_Sea_Ice">Aqua Sea Ice</option>
+                                <option value="MODIS_Aqua_SurfaceReflectance_Bands121">Aqua Surface Reflectance</option>
+                                <option value="MODIS_Terra_Water_Vapor_5km_Day">Terra Water Vapor (Day)</option>
+                                <option value="MODIS_Terra_Water_Vapor_5km_Night">Terra Water Vapor (Night/option>
+                                <option value="MODIS_Water_Mask">Water Mask</option>
+                                <option value="OMI_SO2_Lower_Troposphere">SO2 Lower Troposphere</option>
+                                <option value="OMI_SO2_Middle_Troposphere">SO2 Middle Troposhere</option>
+                                <option value="OMI_SO2_Upper_Troposphere_and_Stratosphere">SO2 Upper and Strat</option>
+                                <option value="VIIRS_SNPP_CorrectedReflectance_BandsM11-I2-I1">Corr Refl Bands M11-I2-I1</option>
+                                <option value="VIIRS_SNPP_CorrectedReflectance_BandsM3-I3-M11">Corr Refl Bands M3-I3-M11</option>
+                                <option value="VIIRS_SNPP_CorrectedReflectance_TrueColor">Corr Refl True Color</option>
                             </select>
                         </div>
                         <div class="checkbox">
