Added some documentation

--- a/index.html
+++ b/index.html
@@ -169,6 +169,17 @@
         <p></p>
     </div>
 
+    <div>
+        <h3>NASA EONET Event Searching and Mapping</h3>
+        <p>Welcome to the EONET event searching and mapping tool.  This application was developed
+        for the 2016 NASA Space Apps Challenge in Indianapolis, IN.  You can generate a map by selecting
+        a base layer of your choice, using the checkboxes to set preferences, and then searching for
+        EONET events by category and date.  If you click on an event, the name and date/time of the
+        event should appear in the top right hand corner.</p>
+        <p>Questions or feedback?  Please contact Wendy Edwards (<a href="mailto:wayward710@gmail.com">
+            wayward710@gmail.com</a>).</p>
+
+    </div>
 </div><!-- /container -->
 
 
