Better updating, added search all for EONET

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <div id="map" style=".map"></div>
 
     <!-- Select map preferences and do EONET search -->
-    <div class="panel-group" id="accordion" style="position:absolute;top:2%;left:20%;padding:5px 3px;opacity:0.8">
+    <div class="panel-group" id="accordion" style="position:absolute;top:2%;left:22%;padding:5px 3px;opacity:0.8">
         <div class="panel panel-default">
             <div class="panel-heading">
                 <h4 class="panel-title">
@@ -137,6 +137,7 @@
                         <div class="form-group">
                             <label for="eonet_category">Category:</label>
                             <select class="form-control" id="eonet_category">
+                                <option value="All">All</option>
                                 <option value="6">Drought</option>
                                 <option value="7">Dust and Haze</option>
                                 <option value="16">Earthquakes</option>
