--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                                 <option value="MODIS_Aqua_Chlorophyll_A">Aqua Chlorophyll</option>
                                 <option value="MODIS_Aqua_CorrectedReflectance_TrueColor">Aqua Corrected Reflectance</option>
                                 <option value="MODIS_Aqua_Land_Surface_Temp_Day"> Aqua Land Surface Temp (Day)</option>
-                                <option value="MODIS_Aqua_Land_Surface_Temp_Night">Aqua Land Surface Temp (Day)</option>
+                                <option value="MODIS_Aqua_Land_Surface_Temp_Night">Aqua Land Surface Temp (Night)</option>
                                 <option value="MODIS_Aqua_Sea_Ice">Aqua Sea Ice</option>
                                 <option value="MODIS_Aqua_SurfaceReflectance_Bands121">Aqua Surface Reflectance</option>
                                 <option value="MODIS_Terra_Water_Vapor_5km_Day">Terra Water Vapor (Day)</option>
