Better display of events

--- a/index.html
+++ b/index.html
@@ -183,6 +183,9 @@
         a base layer of your choice, using the checkboxes to set preferences, and then searching for
         EONET events by category and date.  If you click on an event, the name and date/time of the
         event should appear in the top right hand corner.</p>
+        <p>If the map initially appears to be blank, try scrolling the time slider
+        at the bottom slightly to the left.  It may be trying to access a date that
+        isn't available.</p>
         <p>Questions or feedback?  Please contact Wendy Edwards (<a href="mailto:wayward710@gmail.com">
             wayward710@gmail.com</a>).</p>
 
