Added reset button for EONET searches

--- a/index.html
+++ b/index.html
@@ -168,8 +168,8 @@
                             <label for="eonet_days">Number of Days: </label>
                             <input type="text" class="form-control" id="eonet_days" value="180">
                         </div>
-                        <button type="button" class="btn" id="eonet_btn">Search EONET</button>
-
+                        <button type="button" class="btn-default" id="eonet_reset">Clear results</button>
+                        <button type="button" class="btn-primary" id="eonet_btn">Search EONET</button>
                     </form>
                 </div>
             </div>
