Better display of EONET event information

--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
     </div>
 
     <!-- Label displaying information about selected events -->
-    <div id="summaryLabel" style="color:silver;position:absolute;top:2%;right:10%;padding:5px 3px;">
+    <div id="summaryLabel" style="color:black;background-color:white;position:absolute;top:2%;right:10%;padding:5px 5px;opacity:0.8">
         <p></p>
     </div>
 
