Fixed resolution, added wind speed

--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
                                 <option value="OMI_SO2_Upper_Troposphere_and_Stratosphere">SO2 Upper and Strat</option>
                                 <option value="VIIRS_SNPP_CorrectedReflectance_BandsM11-I2-I1">Corr Refl Bands M11-I2-I1</option>
                                 <option value="VIIRS_SNPP_CorrectedReflectance_BandsM3-I3-M11">Corr Refl Bands M3-I3-M11</option>
+                                <option value="AMSR2_Wind_Speed_Day">Wind Speed (Day)</option>
+                                <option value="AMSR2_Wind_Speed_Night">Wind Speed (Night)</option>
+
 
                             </select>
                         </div>
