Added NO2 layers

--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
                                 <option value="MODIS_Aqua_CorrectedReflectance_TrueColor">Aqua Corrected Reflectance</option>
                                 <option value="MODIS_Aqua_Land_Surface_Temp_Day"> Aqua Land Surface Temp (Day)</option>
                                 <option value="MODIS_Aqua_Land_Surface_Temp_Night">Aqua Land Surface Temp (Night)</option>
+                                <option value="MODIS_Terra_Land_Surface_Temp_Day"> Terra Land Surface Temp (Day)</option>
+                                <option value="MODIS_Terra_Land_Surface_Temp_Night">Terra Land Surface Temp (Night)</option>
                                 <option value="MODIS_Aqua_Sea_Ice">Aqua Sea Ice</option>
                                 <option value="MODIS_Aqua_SurfaceReflectance_Bands121">Aqua Surface Reflectance</option>
                                 <option value="MODIS_Terra_Water_Vapor_5km_Day">Terra Water Vapor (Day)</option>
@@ -116,6 +118,8 @@
                                 <option value="VIIRS_SNPP_CorrectedReflectance_BandsM3-I3-M11">Corr Refl Bands M3-I3-M11</option>
                                 <option value="AMSR2_Wind_Speed_Day">Wind Speed (Day)</option>
                                 <option value="AMSR2_Wind_Speed_Night">Wind Speed (Night)</option>
+                                <option value="MLS_N2O_46hPa_Day">Nitrous Oxide (Day)</option>
+                                <option value="MLS_N2O_46hPa_Night">Nitrous Oxide (Night)</option>
 
 
                             </select>
@@ -191,15 +195,16 @@
 
     <!-- Description/documentation -->
     <div>
-        <h3>NASA EONET Event Searching and Mapping</h3>
+        <h3>Mapping Natural Events</h3>
         <p>Welcome to the EONET event searching and mapping tool.  This application was developed
         for the 2016 NASA Space Apps Challenge in Indianapolis, IN.  You can generate a map by selecting
         a base layer of your choice, using the checkboxes to set preferences, and then searching for
         EONET events by category and date.  If you click on an event, the name and date/time of the
         event should appear in the top right hand corner.</p>
-        <p>If the map initially appears to be blank, try scrolling the time slider
-        at the bottom slightly to the left.  It may be trying to access a date that
-        isn't available.</p>
+        <p>The NASA Space App Challenge page is at
+            <a href="https://2016.spaceappschallenge.org/challenges/earth/earth-live/projects/mapping-natural-events">
+            https://2016.spaceappschallenge.org/challenges/earth/earth-live/projects/mapping-natural-events </a>
+        </p>
         <p>Questions or feedback?  Please contact Wendy Edwards (<a href="mailto:wayward710@gmail.com">
             wayward710@gmail.com</a>).</p>
 
