--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Wendy Edwards">
 
 
-    <title>Indianapolis Space App Challenge 2016</title>
+    <title>Mapping Natural Events</title>
 
     <!-- Bootstrap core CSS -->
 
